# isaac-sim-mcp-custom

./: .env.example  .gitignore  .mcp.json  README-DOCKER.md  build-docker.bat  create_robots_and_lights.py  docker-compose.yml  run-docker.bat
isaac.sim.mcp_extension/isaac_sim_mcp_extension/: usd.py
isaac_mcp/: .dockerignore  Dockerfile  pyproject.toml  server.py
