[project]
name = "isaac-sim-mcp-server"
version = "0.1.0"
description = "MCP server for Isaac Sim control"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["isaac_mcp"]
